--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name = "viewport" content = "width=device-width, minimum-scale=1.0, maximum-scale = 1.0, user-scalable = no">
-  <title>亲爱的，晚安～❤️</title>
+  <title>小可爱，生日快乐🎉🎉</title>
   <style>
     *{
       padding: 0;margin: 0;
