--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
   <div id="out">
     <div class="one">
       <span></span>
-      <span class="up" style="background:pink"></span>
+      <span class="up" style="background:darkslateblue"></span>
       <span></span>
     </div>
     <div class="one">
-      <span class="left" style="background:pink"></span>
+      <span class="left" style="background:darkslateblue"></span>
       <span class="move" style="background:gray"></span>
-      <span class="right" style="background:pink"></span>
+      <span class="right" style="background:darkslateblue"></span>
     </div>
     <div class="one">
       <span></span>
@@ -117,7 +117,7 @@
 
   const board_border = 'blue';
   const board_background = "black";
-  const snake_col = 'darkslateblue';
+  const snake_col = 'slateblue';
   const snake_border = 'darkblue';
   const food_color = 'blueviolet';
   const food_border = 'darkgreen';
